--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "My 1st react app",
   "__main": "index.js",
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
