--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "scripts": {
     "prod": "webpack -p",
     "dist": "webpack",
-    "watch": "webpack-dev-server --progress --colors --history-api-fallback",
+    "watch": "webpack --watch",
+    "watch2": "webpack-dev-server --progress --colors --history-api-fallback",
     "lint": "eslint src/**/*.js*"
   }
 }
