--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "eslint": "^4.13.1",
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^0.11.2",
     "imports-loader": "^0.7.1",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.2",
     "style-loader": "^0.16.1",
     "uglify-js-brunch": "^2.10.0",
     "url-loader": "^0.5.8",
@@ -35,7 +37,6 @@
     "prod": "webpack -p",
     "dist": "webpack",
     "watch": "webpack --watch",
-    "watch2": "webpack-dev-server --progress --colors --history-api-fallback",
     "lint": "eslint src/**/*.js*"
   }
 }
